fix sky firefox top gap

--- a/resources/assets/sass/about.sass
+++ b/resources/assets/sass/about.sass
@@ -34,21 +34,22 @@
       background-position: center bottom
       width: 100%
       position: absolute
+      height: 4000px
       bottom: 0
-      padding-top: 80%
+      padding-top: 100%
       background-repeat: no-repeat
       
       +rwd_md
         background-size: 150% auto
-        height: 1200px
+        height: 4000px
         background-position: 60% bottom 
       +rwd_sm
         background-size: 200% auto
-        height: 1200px
+        height: 4000px
         background-position: 65% bottom   
       +rwd_xs
         background-size: 350% auto
-        height: 1200px
+        height: 4000px
         background-position: 65% bottom  
 
 
