--- a/resources/assets/sass/solution.sass
+++ b/resources/assets/sass/solution.sass
@@ -22,6 +22,8 @@
     // +flex_center
     background-size: cover
     background-position: center center
+    padding-top: grid_sz(0,9)
+    padding-bottom: grid_sz(0,7)
     .section_title
       
       text-align: center
@@ -29,8 +31,6 @@
       letter-spacing: 10px
       // font-size: 26px
       // padding-top: grid_sz(0,1.5)
-      padding-top: grid_sz(0,9)
-      margin-bottom: grid_sz(0,7)
 
     +range_width(0px,800px)
 
